cmake_minimum_required(VERSION 3.20)
project(Yandex_Algorithms_2.0_B)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Yandex_Algorithms_I_week/A1)
add_subdirectory(Yandex_Algorithms_I_week/A2)
add_subdirectory(Yandex_Algorithms_I_week/B1)
add_subdirectory(Yandex_Algorithms_I_week/B2)
add_subdirectory(Yandex_Algorithms_I_week/C1)
add_subdirectory(Yandex_Algorithms_I_week/C2)
add_subdirectory(Yandex_Algorithms_I_week/D1)
add_subdirectory(Yandex_Algorithms_I_week/D2)
add_subdirectory(Yandex_Algorithms_I_week/E1)
add_subdirectory(Yandex_Algorithms_I_week/E2)
add_subdirectory(Yandex_Algorithms_II_week/A3)
add_subdirectory(Yandex_Algorithms_II_week/A4)
add_subdirectory(Yandex_Algorithms_II_week/B3)
add_subdirectory(Yandex_Algorithms_II_week/B4)
add_subdirectory(Yandex_Algorithms_II_week/C3)
add_subdirectory(Yandex_Algorithms_II_week/C4)
add_subdirectory(Yandex_Algorithms_II_week/D3)
add_subdirectory(Yandex_Algorithms_II_week/D4)
add_subdirectory(Yandex_Algorithms_II_week/E3)
add_subdirectory(Yandex_Algorithms_II_week/E4)
